# thin-provisioning-tools

./: .gitignore  .pre-commit-config.yaml  CHANGES  Cargo.toml  Gemfile  Makefile  Makefile.in  README  README.md  Rakefile  TODO.org  VERSION  block.h  block.tcc  block_counter.h  block_t.cc  btree.h  btree.tcc  btree_checker.h  btree_t.cc  btree_validator.h  cache.h  checksum.cc  checksum.h  configure.ac  configure.in  core-map.h  core_map.h  deleter.h  design-notes.org  device-mapper-persistent-data.spec  emitter.h  endian.cc  endian.h  endian_utils.cc  endian_utils.h  error_set.cc  error_set.h  flake.nix  get-gmock.sh  (+50 more)
base/: aligned_memory.cc  aligned_memory.h  application.cc  application.h  base64.cc  base64.h  bits.h  command_interpreter.cc  command_interpreter.h  container_of.h  disk_units.cc  disk_units.h  endian_utils.h  error_state.cc  error_state.h  error_string.cc  error_string.h  file_utils.cc  file_utils.h  grid_layout.cc  grid_layout.h  indented_stream.h  io.h  io_generator.cc  io_generator.h  math_utils.h  nested_output.h  output_file_requirements.cc  output_file_requirements.h  output_formatter.cc  output_formatter.h  progress_monitor.cc  progress_monitor.h  rolling_hash.cc  rolling_hash.h  run.h  run_set.h  sequence_generator.cc  sequence_generator.h  types.h  (+3 more)
block-cache/: block_cache.cc  block_cache.h  buffer.h  copier.cc  copier.h  io_engine.cc  io_engine.h  list.h  mem_pool.cc  mem_pool.h
cache/: cache_check.cc  cache_dump.cc  cache_metadata.h  cache_metadata_disk_structures.cc  cache_metadata_disk_structures.h  check.cc  metadata_disk_structures.cc  metadata_disk_structures.h
caching/: cache_check.cc  cache_debug.cc  cache_dump.cc  cache_metadata.h  cache_metadata_size.cc  cache_repair.cc  cache_restore.cc  cache_writeback.cc  commands.cc  commands.h  devel_commands.cc  dump.cc  emitter.h  hint_array.cc  hint_array.h  mapping_array.cc  mapping_array.h  metadata.cc  metadata.h  metadata_disk_structures.cc  metadata_disk_structures.h  metadata_dump.cc  metadata_dump.h  restore_emitter.cc  restore_emitter.h  superblock.cc  superblock.h  xml_format.cc  xml_format.h
chunker/: cache_stream.cc  cache_stream.h  chunk_stream.cc  chunk_stream.h  fixed_chunk_stream.cc  fixed_chunk_stream.h  pool_stream.cc  pool_stream.h  variable_chunk_stream.cc  variable_chunk_stream.h
contrib/: Makefile.in  ewheeler_emitter.cc  thin_sexp_emitter.cc  tmakatos_emitter.cc  tmakatos_emitter.h  tmakatos_mappings_emitter.cc  tmakatos_mappings_emitter.h
cruncher/: commands.cc  commands.h  compressor.cc  compressor.h  container.h  container_manager.h  crunch.cc  metadata.xdr  stream_manager.h
dbg-lib/: array_block_dumper.h  bitset_block_dumper.cc  bitset_block_dumper.h  block_dumper.h  btree_node_dumper.h  command_interpreter.cc  command_interpreter.h  commands.cc  commands.h  index_block_dumper.cc  index_block_dumper.h  output_formatter.cc  output_formatter.h  simple_show_traits.cc  simple_show_traits.h  sm_show_traits.cc  sm_show_traits.h
device-mapper/: interface.cc  interface.h  ioctl_interface.cc  ioctl_interface.h
doc/: TODO.md  bm-journal.patch  cruncher.md
era/: bloom_tree.cc  bloom_tree.h  commands.cc  commands.h  devel_commands.cc  emitter.h  era_array.cc  era_array.h  era_check.cc  era_debug.cc  era_detail.cc  era_detail.h  era_dump.cc  era_invalidate.cc  era_restore.cc  metadata.cc  metadata.h  metadata_dump.cc  metadata_dump.h  restore_emitter.cc  restore_emitter.h  superblock.cc  superblock.h  writeset_tree.cc  writeset_tree.h  xml_format.cc  xml_format.h
examples/: custom-emitter.rs
features/: cache_check.feature  cache_dump.feature  cache_metadata_size.feature  cache_restore.feature  era_check.feature  era_restore.feature  thin_check.feature  thin_delta.feature  thin_restore.feature  thin_rmap.feature
ft-lib/: bcache.c  bcache.h  dm-ioctl.c
functional-tests/: binary-format.scm  block-cache.scm  block-io.scm  btree.scm  cache-functional-tests.scm  cache-xml.scm  check-superblock.scm  crc32.scm  disk-units.scm  dmtest  era-functional-tests.scm  era-xml.scm  fail.scm  find-working-roots.scm  functional-tests.scm  generators.scm  list-utils.scm  logging.scm  loops.scm  main.scm  mapping-tree.scm  math-utils.scm  parser-combinators.scm  process.scm  regex-bench.scm  regex.scm  run-functional-tests.scm  run-tests  run-tests.scm  scenario-string-constants.scm  show-tests.scm  temp-file.scm  test-runner.scm  thin-calc-ref-counts  thin-functional-tests.scm  thin-xml.scm  utils.scm  xml.scm
man8/: cache_check.8  cache_check.txt  cache_dump.8  cache_dump.txt  cache_metadata_size.8  cache_metadata_size.txt  cache_repair.8  cache_repair.txt  cache_restore.8  cache_restore.txt  cache_writeback.8  cache_writeback.txt  era_check.8  era_check.txt  era_dump.8  era_dump.txt  era_invalidate.8  era_invalidate.txt  era_repair.txt  era_restore.8  era_restore.txt  thin_check.8  thin_check.txt  thin_delta.8  thin_delta.txt  thin_dump.8  thin_dump.txt  thin_ls.8  thin_ls.txt  thin_metadata_pack.txt  thin_metadata_size.8  thin_metadata_size.txt  thin_metadata_unpack.txt  thin_migrate.txt  thin_repair.8  thin_repair.txt  thin_restore.8  thin_restore.txt  thin_rmap.8  thin_rmap.txt  (+3 more)
persistent-data/: array.h  block.cc  block.h  block.tcc  block_counter.h  btree.h  buffer.h  cache.h  checksum.cc  checksum.h  deleter.h  endian_utils.cc  endian_utils.h  error_set.h  errors.h  file_utils.cc  file_utils.h  hex_dump.cc  hex_dump.h  lock_tracker.cc  lock_tracker.h  math_utils.h  range.h  run.h  run_list.h  run_set.h  space_map.cc  space_map.h  space_map_careful_alloc.cc  space_map_careful_alloc.h  space_map_core.h  space_map_disk.cc  space_map_disk.h  space_map_recursive.cc  space_map_recursive.h  space_map_transactional.cc  space_map_transactional.h  span.tcc  transaction_manager.cc  transaction_manager.h  (+2 more)
src/: aio_engine.rs  async_copier.rs  block_manager.rs  checksum.rs  copier.rs  (+17 more)
src/thinp_dev/: Cargo.toml
src/thinp_dev/src/: lib.rs
src/thinp_dev/src/cache/: metadata_generator.rs  mod.rs
src/thinp_dev/src/commands/: cache_generate_metadata.rs  mod.rs  thin_explore.rs
(+528 files in other folders)
