[package]
name = "thinp"
version = "1.0.7"
authors = ["Joe Thornber <ejt@redhat.com>"]
edition = "2021"
license = "GPL3"

[dependencies]
atty = "0.2"
anyhow = "1.0"
base64 = "0.21"
byteorder = "1.4"
clap = { version = "4.3", default-features = false, features = ["std", "help", "usage", "error-context", "suggestions"] }
crc32c = "0.6"
data-encoding = "2.4"
exitcode = "1.1.2"
fixedbitset = "0.4"
flate2 = "1.0"
iovec = "0.1"
indicatif = "0.17"
libc = "0.2"
nom = "7.1"
num_cpus = "1.16"
num-derive = "0.4"
num-traits = "0.2"
quick-xml = "0.29"
rand = "0.8"
rangemap = "1.3"
roaring = "0.10"
rio = { git = "https://github.com/jthornber/rio", branch = "master", optional = true }
safemem = "0.3"
threadpool = "1.8"
thiserror = "1.0"
tui = { version = "0.19", default-features = false, features = ["termion"], optional = true }
termion = { version = "1.5", optional = true }

[dev-dependencies]
duct = "0.13"
mockall = "0.11"
quickcheck = "1.0"
quickcheck_macros = "1.0"
rand = { version = "0.8", features = ["small_rng"] }
tempfile = "3.6"
thinp = { path = ".", features = ["devtools"] }

[features]
devtools = ["tui", "termion"]
io_uring = ["dep:rio"]

[profile.release]
debug = true

[[bin]]
name = "pdata_tools_dev"
required-features = ["devtools"]
