[package]
name = "thinp"
version = "1.3.0"
authors = ["Joe Thornber <ejt@redhat.com>"]
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
byteorder = "1.4"
clap = { version = "4.5", default-features = false, features = [
  "std",
  "help",
  "usage",
  "error-context",
  "suggestions",
] }
crc32c = "0.6"
data-encoding = "2.9"
devicemapper = "0.34"
exitcode = "1.1.2"
fixedbitset = "0.5"
flate2 = "1.1"
io-uring = { version = "0.7.10", optional = true }
iovec = "0.1"
indicatif = "0.18"
libc = "0.2"
nom = "8.0"
num_cpus = "1.17"
num-derive = "0.4"
num-traits = "0.2"
quick-xml = "0.38"
rand = "0.9"
rangemap = "1.6"
roaring = "0.11"
thiserror = "2.0"
ratatui = { version = "0.29", default-features = false, features = [
  "termion",
], optional = true }
termion = { version = "4.0", optional = true }
udev = "0.9"

[dev-dependencies]
duct = "1.1"
mockall = "0.13"
quickcheck = "1.0"
quickcheck_macros = "1.1"
rand = "0.9"
tempfile = "3.23"
thinp = { path = ".", features = ["devtools"] }

[features]
devtools = ["ratatui", "termion"]
io_uring = ["dep:io-uring"]
no_cleanup = []

[profile.release]
debug = true

[[bin]]
name = "pdata_tools_dev"
required-features = ["devtools"]
